Application now displays the solution, some styling tidied up.