@@ -1,2 +1,11 @@
-# sudoku-solver
+# Sudoku Solver
 Java application for solving Sudoku puzzles.
+## Usage
+Using the command line navigate to src/main/java and run the following command:
+```bash
+java --module-path ./lib/ --add-modules=javafx.controls SudokuSolver
+```
+## Example
+<p>
+    <img src="src/main/resources/screenshot1.png"></img>
+</p>
